# pycookiecheat

./: .editorconfig  .env  .gitignore  .python-version  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.txt  flake.nix  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/workflows/: python-package.yml  python-publish.yml
pycookiecheat/: __init__.py  pycookiecheat.py
pycookiecheat (python2)/: pycookiecheat.py
src/pycookiecheat/: __init__.py  __main__.py  chrome.py  common.py  firefox.py  pycookiecheat.py
tests/: Cookies  test_chrome.py  test_common.py  test_firefox.py  test_pycookiecheat.py
