[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target_version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
order_by_type = false
line_length = 79

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "pycookiecheat.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.8"
show_column_numbers = true
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = true

[project]
name = "pycookiecheat"
urls = {homepage = "https://github.com/n8henrie/pycookiecheat"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "Borrow cookies from your browser's authenticated session for use in Python scripts."
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = ["pycookiecheat", "chrome", "chromium cookies", "cookies", "firefox"]
classifiers= [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography==42.*",
    "keyring==25.*",
]

[project.optional-dependencies]
test = [
    "black==24.*",
    "flake8-docstrings==1.*",
    "flake8-import-order==0.18.*",
    "flake8==7.*",
    "mypy==1.*",
    "pep8-naming==0.13.*",
    "playwright==1.*",
    "pycodestyle==2.*",
    "pytest==8.*",
    "tox==4.*",
]
dev = [
    "build==1.*",
    "twine==5.*",
    "wheel==0.43.*",
]

[project.scripts]
pycookiecheat = "pycookiecheat.__main__:main"
