[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "pycookiecheat.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.9"
show_column_numbers = true
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]

[project]
name = "pycookiecheat"
urls = {homepage = "https://github.com/n8henrie/pycookiecheat"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "Borrow cookies from your browser's authenticated session for use in Python scripts."
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = ["pycookiecheat", "chrome", "chromium cookies", "cookies", "firefox"]
classifiers= [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography==43.*",
    "keyring==25.*",
]

[project.optional-dependencies]
test = [
    "mypy==1.*",
    "playwright==1.*",
    "pytest==8.*",
    "ruff==0.7.*",
    "tox==4.*",
]
dev = [
    "build==1.*",
    "twine==5.*",
    "wheel==0.43.*",
]

[project.scripts]
pycookiecheat = "pycookiecheat.__main__:main"
