[metadata]
name = pycookiecheat
url = https://github.com/n8henrie/pycookiecheat
version = attr: pycookiecheat.__version__
license = MIT
license_files = LICENCE
description = Borrow cookies from your browser's authenticated session for use in Python scripts.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = pycookiecheat chrome chromium cookies
classifiers=
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    cryptography==3.4.6
    keyring==23.0.0

[options.extras_require]
test =
    black==21.7b0
    flake8-docstrings==1.5.0
    flake8-import-order==0.18.1
    flake8==3.8.4
    mypy==0.812
    pep8-naming==0.11.1
    playwright==1.14.1
    pycodestyle==2.6.0
    pylint==2.7.2
    pytest==6.2.3
    tox==3.23.0
dev =
    build==0.6.0.post1
    twine==3.4.2
    wheel==0.37.0

[options.packages.find]
where=src
